<resources>
    <string name="app_name">ExtensionAndroidApp</string>

    <string name="startString">Extension Android App</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">loginActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="up_button_text">&#xf176;</string>
    <string name="down_button_text">&#xf175;</string>
    <string name="right_button_text">&#xf178;</string>
    <string name="left_button_text">&#xf177;</string>
    <string name="take_button_text">&#xf030;</string>
    <string name="image_view_desc">camera_image_view</string>

    <string name="menu_logout">Logout</string>

</resources>
